# Elite_Robots_CS_Interface

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
include/: EliteCSRobot.h  RobotGlobal.h  RobotInterface.h
resources/: external_control.script
source/: EliteCSRobot.cpp  test.cpp
test/: CMakeLists.txt  ConnectionTest.cpp  MotionTest.cpp  PathTest.cpp  StateTest.cpp
